--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,7 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+tsconfig.tsbuildinfo
+webpack.config.js
+webpack.config.js.map
+tsconfig.prebuild.tsbuildinfo
